--- a/public/index-6.html
+++ b/public/index-6.html
@@ -464,7 +464,7 @@
                     <ul>
                         <li>Thoothukudi</li>
                         <li><a href="tel:+919444781055">+91-9444781055</a></li>
-                        <li><a href="mailto:info@example.com">info@example.com</a></li>
+                        <li><a href="mailto:zenogenz@outlook.in">zenogenz@outlook.in</a></li>
                     </ul>
                 </div>
                 <div class="social-links">
@@ -880,7 +880,7 @@
 
 
         <!-- testimonial-nine -->
-        <section class="testimonial-nine p_relative pt_100 pb_120">
+        <!-- <section class="testimonial-nine p_relative pt_100 pb_120">
             <div class="pattern-layer p_absolute l_0 t_0" style="background-image: url(assets/images/shape/shape-143.png);"></div>
             <div class="auto-container">
                 <div class="row clearfix">
@@ -936,7 +936,7 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </section> -->
         <!-- testimonial-nine -->
 
 
@@ -1175,7 +1175,7 @@
                                     <ul class="info-list clearfix">
                                         <li>THOOTHUKUDI</li>
                                         <li><a href="tel:+919444781055">+91-9444-7810-55</a></li>
-                                        <li><a href="mailto:sample@example.com">sample@example.com</a></li>
+                                        <li><a href="mailto:zenogenz@outlook.in">zenogenz@outlook.in</a></li>
                                     </ul>
                                 </div>
                             </div>
