--- a/public/index.html
+++ b/public/index.html
@@ -136,7 +136,7 @@
                                 </li>
                                 <li class="p_relative d_iblock float_left lh_55 pl_25 fs_16">
                                     <i class="icon-3"></i>
-                                    <p>Email: <a href="mailto:sample@example.com">sample@example.com</a></p>
+                                    <p>Email: <a href="mailto:zenogenz@outlook.in">zenogenz@outlook.in</a></p>
                                 </li>
                             </ul>
                         </div>
@@ -459,7 +459,7 @@
                     <ul>
                         <li>Thoothukudi</li>
                         <li><a href="tel:+919444781055">+91-9444781055</a></li>
-                        <li><a href="mailto:info@example.com">info@example.com</a></li>
+                        <li><a href="mailto:zenogenz@outlook.in">zenogenz@outlook.in</a></li>
                     </ul>
                 </div>
                 <div class="social-links">
@@ -1018,7 +1018,7 @@
 
 
         <!-- testimonial-one -->
-        <section class="testimonial-one p_relative">
+        <!-- <section class="testimonial-one p_relative">
             <div class="auto-container">
                 <div class="inner-container p_relative pt_150 pb_140">
                     <div class="section-line">
@@ -1030,7 +1030,7 @@
                         <span class="sub-title p_relative d_iblock fs_15 fw_medium g_color mb_19">Testimonials</span>
                         <h2 class="p_relative d_block fs_40 fw_bold mb_30">Trusted by More Than 3k Clients <br />Around The World</h2>
                         <!--<p>Amet consectur adipiscing elit sed eiusmod ex tempor incididunt <br />labore dolore aliquaenim minim veniam.</p> -->
-                    </div>
+                    <!-- </div>
                     <div class="three-item-carousel owl-carousel owl-theme owl-nav-none dots-style-one">
                         <div class="testimonial-block-one">
                             <div class="inner-box p_relative d_block">
@@ -1209,7 +1209,7 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </section> --> -->
         <!-- testimonial-one -->
 
 
@@ -1540,7 +1540,7 @@
                 <div class="auto-container">
                     <div class="row clearfix">
                         <div class="col-lg-4 col-md-6 col-sm-12 footer-column">
-                            <div class="footer-widget about-widget wow fadeInUp animated" data-wow-delay="00ms" data-wow-duration="1500ms">
+                            <!-- <div class="footer-widget about-widget wow fadeInUp animated" data-wow-delay="00ms" data-wow-duration="1500ms">
                                 <div class="widget-title">
                                     <h4>About</h4>
                                 </div>
@@ -1555,7 +1555,7 @@
                                         </div>
                                     </form>
                                 </div>
-                            </div>
+                            </div> -->
                         </div>
                         <div class="col-lg-3 col-md-6 col-sm-12 footer-column">
                             <div class="footer-widget links-widget ml_80 wow fadeInUp animated" data-wow-delay="200ms" data-wow-duration="1500ms">
@@ -1600,7 +1600,7 @@
                                     <ul class="info-list clearfix">
                                         <li>THOOTHUKUDI</li>
                                         <li><a href="tel:+919444781055">++91-9444-7810-55</a></li>
-                                        <li><a href="mailto:sample@example.com">sample@example.com</a></li>
+                                        <li><a href="mailto:zenogenz@outlook.in">zenogenz@outlook.in</a></li>
                                     </ul>
                                 </div>
                             </div>
