--- a/public/about-2.html
+++ b/public/about-2.html
@@ -471,7 +471,7 @@
                     <ul>
                         <li>thoothukudi</li>
                         <li><a href="tel:+919444781055">+91-9444-7810-55</a></li>
-                        <li><a href="mailto:info@example.com">info@example.com</a></li>
+                        <li><a href="mailto:zenogenz@outlook.in">zenogenz@outlook.in</a></li>
                     </ul>
                 </div>
                 <div class="social-links">
@@ -971,7 +971,7 @@
                                     <ul class="info-list clearfix">
                                         <li>thoothukudi</li>
                                         <li><a href="tel:+919444781055">+91-9444-7810-55</a></li>
-                                        <li><a href="mailto:sample@example.com">sample@example.com</a></li>
+                                        <li><a href="mailto:zenogenz@outlook.in">zenogenz@outlook.in</a></li>
                                     </ul>
                                 </div>
                             </div>
