--- a/public/service.html
+++ b/public/service.html
@@ -461,7 +461,7 @@
                     <ul>
                         <li>Thoothukudi</li>
                         <li><a href="tel:+919444781055">+91-9444781055</a></li>
-                        <li><a href="mailto:info@example.com">info@example.com</a></li>
+                        <li><a href="mailto:zenogenz@outlook.in">zenogenz@outlook.in</a></li>
                     </ul>
                 </div>
                 <div class="social-links">
@@ -984,7 +984,7 @@
                                     <ul class="info-list clearfix">
                                         <li>THOOTHUKUDI</li>
                                         <li><a href="tel:+919444781055">+91-9444-7810-55</a></li>
-                                        <li><a href="mailto:sample@example.com">sample@example.com</a></li>
+                                        <li><a href="mailto:zenogenz@outlook.in">zenogenz@outlook.in</a></li>
                                     </ul>
                                 </div>
                             </div>
