--- a/public/index.html
+++ b/public/index.html
@@ -486,7 +486,7 @@
                         <div class="shape-3 p_absolute r_0 b_0 z_1" style="background-image: url(assets/images/shape/shape-4.png);"></div>
                         <div class="shape-4 p_absolute r_0 b_0 z_1" style="background-image: url(assets/images/shape/shape-5.png);"></div>
                     </div>
-                    <div class="image-layer p_absolute" style="background-image:url(assets/images/banner/banner-1.jpg)"></div>
+                    <div class="image-layer p_absolute" style="background-image:url(assets/images/banner/computer.png)"></div>
                     <div class="auto-container">
                         <div class="content-box p_relative d_block z_5">
                             <h2 class="p_relative d_iblock fw_bold fs_80 lh_70 mb_25"><span class="slider-text-anim">Make Your Business with</span><br /> <span class="slider-text-anim">Unique Ideas.</span></h2>
@@ -602,7 +602,7 @@
                                         <div data-depth="0.40" class="shape-1 p_absolute w_95 h_95" style="background-image: url(assets/images/shape/shape-6.png);"></div>
                                         <div data-depth="0.50" class="shape-2 p_absolute w_95 h_95" style="background-image: url(assets/images/shape/shape-6.png);"></div>
                                     </div>
-                                    <figure data-animation-text class="overlay-anim-black-bg image image-1 p_relative d_block b_radius_10" data-animation="overlay-animation"><img src="assets/images/resource/about-1.jpg" alt=""></figure>
+                                    <figure data-animation-text class="overlay-anim-black-bg image image-1 p_relative d_block b_radius_10" data-animation="overlay-animation"><img src="assets/images/resource/development.png" alt=""></figure>
                                     <div class="video-inner p_absolute r_140 b_0 pt_60 pb_60 text-center b_radius_10 w_200 z_2" style="background-image: url(assets/images/resource/about-2.jpg);">
                                         <div class="video-btn">
                                             <a href="https://www.youtube.com/watch?v=nfP5N9Yc72A&amp;t=28s" class="lightbox-image video-btn p_relative d_iblock w_80 h_80 lh_85 text-center b_radius_50" data-caption=""><i class="icon-10"></i></a>
