--- a/public/service.html
+++ b/public/service.html
@@ -507,11 +507,11 @@
                                     <div class="icon-img hidden-icon"><img src="assets/images/icons/hid-icon-2.png" alt=""></div>
                                     <div class="icon-shape hero-shape-four p_absolute w_90 h_70 tran_5"></div>
                                 </div>
-                                <h4 class="p_relative d_block fs_20 lh_30 fw_sbold mb_25"><a href="service-details.html" class="d_iblock color_black">Strategic Consulting Services</a></h4>
-                                <p class="p_relative d_block mb_20 font_family_poppins">Lorem ipsum dolor sit oris elit consectetur sed eiusmod.</p>
-                                <div class="link p_relative d_block">
+                                <h4 class="p_relative d_block fs_20 lh_30 fw_sbold mb_25"><a href="service-details.html" class="d_iblock color_black">Static Site Development</a></h4>
+                                <p class="p_relative d_block mb_20 font_family_poppins">Build elegant and responsive static websites that showcase your brand and message effectively. Our team specializes in crafting visually appealing sites with fast loading times, perfect for informational or promotional purposes.</p>
+                                <!-- <div class="link p_relative d_block">
                                     <a href="service-details.html" class="p_relative d_iblock fs_15 fw_sbold font_family_inter color_black">Learn more<i class="icon-4"></i></a>
-                                </div>
+                                </div> -->
                             </div>
                         </div>
                     </div>
@@ -523,11 +523,11 @@
                                     <div class="icon-img hidden-icon"><img src="assets/images/icons/hid-icon-3.png" alt=""></div>
                                     <div class="icon-shape hero-shape-four p_absolute w_90 h_70 tran_5"></div>
                                 </div>
-                                <h4 class="p_relative d_block fs_20 lh_30 fw_sbold mb_25"><a href="service-details.html" class="d_iblock color_black">Best Financial Advice</a></h4>
-                                <p class="p_relative d_block mb_20 font_family_poppins">Lorem ipsum dolor sit oris elit consectetur sed eiusmod.</p>
-                                <div class="link p_relative d_block">
+                                <h4 class="p_relative d_block fs_20 lh_30 fw_sbold mb_25"><a href="service-details.html" class="d_iblock color_black">Dynamic Site Development</a></h4>
+                                <p class="p_relative d_block mb_20 font_family_poppins">Harness the power of dynamic websites to engage your audience and drive conversions. Our dynamic site development services include database integration, content management systems (CMS), and interactive features tailored to your specific needs.</p>
+                                <!-- <div class="link p_relative d_block">
                                     <a href="service-details.html" class="p_relative d_iblock fs_15 fw_sbold font_family_inter color_black">Learn more<i class="icon-4"></i></a>
-                                </div>
+                                </div> -->
                             </div>
                         </div>
                     </div>
@@ -539,11 +539,11 @@
                                     <div class="icon-img hidden-icon"><img src="assets/images/icons/hid-icon-4.png" alt=""></div>
                                     <div class="icon-shape hero-shape-four p_absolute w_90 h_70 tran_5"></div>
                                 </div>
-                                <h4 class="p_relative d_block fs_20 lh_30 fw_sbold mb_25"><a href="service-details.html" class="d_iblock color_black">Investment & Management</a></h4>
-                                <p class="p_relative d_block mb_20 font_family_poppins">Lorem ipsum dolor sit oris elit consectetur sed eiusmod.</p>
-                                <div class="link p_relative d_block">
+                                <h4 class="p_relative d_block fs_20 lh_30 fw_sbold mb_25"><a href="service-details.html" class="d_iblock color_black">Web App Development</a></h4>
+                                <p class="p_relative d_block mb_20 font_family_poppins">Transform your business processes with custom web applications tailored to your unique requirements. From inventory management systems to customer portals, our web app development services empower you to streamline operations and enhance productivity.</p>
+                                <!-- <div class="link p_relative d_block">
                                     <a href="service-details.html" class="p_relative d_iblock fs_15 fw_sbold font_family_inter color_black">Learn more<i class="icon-4"></i></a>
-                                </div>
+                                </div> -->
                             </div>
                         </div>
                     </div>
@@ -555,11 +555,11 @@
                                     <div class="icon-img hidden-icon"><img src="assets/images/icons/hid-icon-5.png" alt=""></div>
                                     <div class="icon-shape hero-shape-four p_absolute w_90 h_70 tran_5"></div>
                                 </div>
-                                <h4 class="p_relative d_block fs_20 lh_30 fw_sbold mb_25"><a href="service-details.html" class="d_iblock color_black">Corporate Clients & Services</a></h4>
-                                <p class="p_relative d_block mb_20 font_family_poppins">Lorem ipsum dolor sit oris elit consectetur sed eiusmod.</p>
-                                <div class="link p_relative d_block">
+                                <h4 class="p_relative d_block fs_20 lh_30 fw_sbold mb_25"><a href="service-details.html" class="d_iblock color_black">iOS App Development</a></h4>
+                                <p class="p_relative d_block mb_20 font_family_poppins">Reach millions of iOS users with engaging and intuitive mobile applications developed for iPhone and iPad devices. Our iOS app development services combine cutting-edge technology with user-centric design to deliver seamless experiences that delight users.</p>
+                                <!-- <div class="link p_relative d_block">
                                     <a href="service-details.html" class="p_relative d_iblock fs_15 fw_sbold font_family_inter color_black">Learn more<i class="icon-4"></i></a>
-                                </div>
+                                </div> -->
                             </div>
                         </div>
                     </div>
@@ -571,11 +571,11 @@
                                     <div class="icon-img hidden-icon"><img src="assets/images/icons/hid-icon-120.png" alt=""></div>
                                     <div class="icon-shape hero-shape-four p_absolute w_90 h_70 tran_5"></div>
                                 </div>
-                                <h4 class="p_relative d_block fs_20 lh_30 fw_sbold mb_25"><a href="service-details.html" class="d_iblock color_black">Management & Marketing System</a></h4>
-                                <p class="p_relative d_block mb_20 font_family_poppins">Lorem ipsum dolor sit oris elit consectetur sed eiusmod.</p>
-                                <div class="link p_relative d_block">
+                                <h4 class="p_relative d_block fs_20 lh_30 fw_sbold mb_25"><a href="service-details.html" class="d_iblock color_black">Android App Development</a></h4>
+                                <p class="p_relative d_block mb_20 font_family_poppins">Tap into the vast Android market with high-quality mobile applications designed for smartphones and tablets. Our Android app development services leverage the latest development tools and frameworks to create feature-rich apps that stand out in the Google Play Store.</p>
+                                <!-- <div class="link p_relative d_block">
                                     <a href="service-details.html" class="p_relative d_iblock fs_15 fw_sbold font_family_inter color_black">Learn more<i class="icon-4"></i></a>
-                                </div>
+                                </div> -->
                             </div>
                         </div>
                     </div>
@@ -587,11 +587,11 @@
                                     <div class="icon-img hidden-icon"><img src="assets/images/icons/hid-icon-121.png" alt=""></div>
                                     <div class="icon-shape hero-shape-four p_absolute w_90 h_70 tran_5"></div>
                                 </div>
-                                <h4 class="p_relative d_block fs_20 lh_30 fw_sbold mb_25"><a href="service-details.html" class="d_iblock color_black">Business Analytics Report</a></h4>
-                                <p class="p_relative d_block mb_20 font_family_poppins">Lorem ipsum dolor sit oris elit consectetur sed eiusmod.</p>
-                                <div class="link p_relative d_block">
+                                <h4 class="p_relative d_block fs_20 lh_30 fw_sbold mb_25"><a href="service-details.html" class="d_iblock color_black">Google Cloud Platform (GCP)</a></h4>
+                                <p class="p_relative d_block mb_20 font_family_poppins">Harness the power of Google Cloud Platform (GCP) with our expert services. We design scalable, secure cloud environments, optimize data storage with Cloud Storage and BigQuery, and streamline app deployment with robust DevOps tools. Protect your data with GCP's top security and compliance features. Combined with our expertise in website, web app, and mobile app development, we empower your business to thrive in today's digital landscape.</p>
+                                <!-- <div class="link p_relative d_block">
                                     <a href="service-details.html" class="p_relative d_iblock fs_15 fw_sbold font_family_inter color_black">Learn more<i class="icon-4"></i></a>
-                                </div>
+                                </div> -->
                             </div>
                         </div>
                     </div>
