--- a/public/index.html
+++ b/public/index.html
@@ -1524,7 +1524,7 @@
                     <div class="row clearfix">
                         <div class="col-lg-4 col-md-6 col-sm-12 footer-column">
                             <div class="footer-widget about-widget">
-                                <figure class="footer-logo p_relative d_block mb_35"><a href="index-3.html"><img src="assets/images/z-blak-logo.png" alt=""></a></figure>
+                                <figure class="footer-logo p_relative d_block mb_35"><a href="index.html"><img src="assets/images/z-blak-logo.png" alt=""></a></figure>
                                 <!-- <div class="text">
                                     <p>Lorem ipsum dolor amet consecto adi pisicing elit sed eiusm tempor incididunt labore dolore magna aliqua enim ad minim.</p>
                                 </div> -->
