--- a/public/about-2.html
+++ b/public/about-2.html
@@ -722,7 +722,7 @@
                                 <div class="line-shape p_absolute tran_5 t_20" style="background-image: url(assets/images/shape/shape-178.png);"></div>
                                 <div class="count-box p_relative d_iblock w_70 h_70 lh_70 centred b_radius_50 fs_18 fw_sbold font_family_inter z_1 tran_5 mb_80">
                                     <span class="p_relative tran_5">1</span>
-                                    <div class="overlay-icon p_absolute l_0 t_0 r_0 w_70 h_70 lh_70 centred fs_25 tran_5"><i class="icon-16"></i></div>
+                                    <div class="overlay-icon p_absolute l_0 t_0 r_0 w_70 h_70 lh_70 centred fs_25 tran_5"><i class='bx bx-check'></i></div>
                                 </div>
                                 <div class="text">
                                     <h4 class="d_block fs_20 fw_sbold lh_30 mb_16">Make Schedule</h4>
@@ -737,7 +737,7 @@
                                 <div class="line-shape p_absolute tran_5 t_20" style="background-image: url(assets/images/shape/shape-178.png);"></div>
                                 <div class="count-box p_relative d_iblock w_70 h_70 lh_70 centred b_radius_50 fs_18 fw_sbold font_family_inter z_1 tran_5 mb_80">
                                     <span class="p_relative tran_5">2</span>
-                                    <div class="overlay-icon p_absolute l_0 t_0 r_0 w_70 h_70 lh_70 centred fs_25 tran_5"><i class="icon-16"></i></div>
+                                    <div class="overlay-icon p_absolute l_0 t_0 r_0 w_70 h_70 lh_70 centred fs_25 tran_5"><i class='bx bx-check'></i></div>
                                 </div>
                                 <div class="text">
                                     <h4 class="d_block fs_20 fw_sbold lh_30 mb_16">Start Discussion</h4>
@@ -751,7 +751,7 @@
                             <div class="inner-box p_relative d_block pl_30 pr_30">
                                 <div class="count-box p_relative d_iblock w_70 h_70 lh_70 centred b_radius_50 fs_18 fw_sbold font_family_inter z_1 tran_5 mb_80">
                                     <span class="p_relative tran_5">3</span>
-                                    <div class="overlay-icon p_absolute l_0 t_0 r_0 w_70 h_70 lh_70 centred fs_25 tran_5"><i class="icon-16"></i></div>
+                                    <div class="overlay-icon p_absolute l_0 t_0 r_0 w_70 h_70 lh_70 centred fs_25 tran_5"><i class='bx bx-check'></i></div>
                                 </div>
                                 <div class="text">
                                     <h4 class="d_block fs_20 fw_sbold lh_30 mb_16">Enjoy Plan</h4>
