--- a/public/contact.html
+++ b/public/contact.html
@@ -540,7 +540,7 @@
             <div class="bg-color p_absolute l_0 t_0 r_0 bg-color-1"></div>
             <div class="auto-container">
                 <div class="sec-title p_relative d_block mb_50">
-                    <h5 class="d_block fs_17 lh_20 fw_sbold uppercase mb_15">Get In Touch</h5>
+                    <h5 class="d_block fs_17 lh_20 fw_sbold uppercase mb_15 " style="color: rgb(244, 23, 199);">Get In Touch</h5>
                     <!-- <h2 class="d_block fs_40 fw_bold">Have a Project in Mind? <br/>Let’s Contact</h2> -->
                 </div>
                 <div class="row clearfix">
@@ -548,7 +548,7 @@
                         <div class="info-block-one wow fadeInUp animated" data-wow-delay="00ms" data-wow-duration="1500ms">
                             <div class="inner-box p_relative d_block b_radius_10 b_shadow_6 pt_40 pr_40 pb_35 pl_40">
                                 <div class="icon-box p_relative d_iblock w_80 h_80 lh_80 b_radius_50 text-center fs_45 z_1 mb_25 tran_5">
-                                    <div class="icon p_relative d_iblock"><i class="icon-180"></i></div>
+                                    <div class="icon p_relative d_iblock"><img src="assets/images/icons/hid-icon-133.png" alt="" style="color: rgb(244, 23, 199);"></div>
                                     <div class="icon-img hidden-icon"><img src="assets/images/icons/hid-icon-133.png" alt=""></div>
                                 </div>
                                 <h4 class="d_block fs_20 lh_30 fw_sbold mb_7">Office Location</h4>
@@ -560,7 +560,7 @@
                         <div class="info-block-one wow fadeInUp animated" data-wow-delay="300ms" data-wow-duration="1500ms">
                             <div class="inner-box p_relative d_block b_radius_10 b_shadow_6 pt_40 pr_40 pb_35 pl_40">
                                 <div class="icon-box p_relative d_iblock w_80 h_80 lh_80 b_radius_50 text-center fs_45 z_1 mb_25 tran_5">
-                                    <div class="icon p_relative d_iblock"><i class="icon-181"></i></div>
+                                    <div class="icon p_relative d_iblock"><img src="assets/images/icons/hid-icon-134.png" alt=""></div>
                                     <div class="icon-img hidden-icon"><img src="assets/images/icons/hid-icon-134.png" alt=""></div>
                                 </div>
                                 <h4 class="d_block fs_20 lh_30 fw_sbold mb_7">Company Email</h4>
@@ -573,7 +573,7 @@
                         <div class="info-block-one wow fadeInUp animated" data-wow-delay="600ms" data-wow-duration="1500ms">
                             <div class="inner-box p_relative d_block b_radius_10 b_shadow_6 pt_40 pr_40 pb_35 pl_40">
                                 <div class="icon-box p_relative d_iblock w_80 h_80 lh_80 b_radius_50 text-center fs_45 z_1 mb_25 tran_5">
-                                    <div class="icon p_relative d_iblock"><i class="icon-182"></i></div>
+                                    <div class="icon p_relative d_iblock"><img src="assets/images/icons/hid-icon-135.png" alt=""></div>
                                     <div class="icon-img hidden-icon"><img src="assets/images/icons/hid-icon-135.png" alt=""></div>
                                 </div>
                                 <h4 class="d_block fs_20 lh_30 fw_sbold mb_7">Contact Us</h4>
