--- a/public/service.html
+++ b/public/service.html
@@ -546,7 +546,7 @@
                         <div class="service-block-14 wow fadeInUp animated" data-wow-delay="00ms" data-wow-duration="1500ms">
                             <div class="inner-box p_relative d_block pl_35 pt_50 pr_35 pb_35 b_radius_10 tran_5 b_shadow_6 mb_30">
                                 <div class="icon-box p_relative d_iblock mb_35">
-                                    <div class="icon p_relative d_iblock fs_45 g_color tran_5"><i class="icon-11"></i></div>
+                                    <div class="icon p_relative d_iblock fs_45 g_color tran_5"><img src="assets/images/icons/hid-icon-2.png" alt=""></div>
                                     <div class="icon-img hidden-icon"><img src="assets/images/icons/hid-icon-2.png" alt=""></div>
                                     <div class="icon-shape hero-shape-four p_absolute w_90 h_70 tran_5"></div>
                                 </div>
@@ -562,7 +562,7 @@
                         <div class="service-block-14 wow fadeInUp animated" data-wow-delay="300ms" data-wow-duration="1500ms">
                             <div class="inner-box p_relative d_block pl_35 pt_50 pr_35 pb_35 b_radius_10 tran_5 b_shadow_6 mb_30">
                                 <div class="icon-box p_relative d_iblock mb_35">
-                                    <div class="icon p_relative d_iblock fs_45 g_color tran_5"><i class="icon-12"></i></div>
+                                    <div class="icon p_relative d_iblock fs_45 g_color tran_5"><img src="assets/images/icons/hid-icon-3.png" alt=""></div>
                                     <div class="icon-img hidden-icon"><img src="assets/images/icons/hid-icon-3.png" alt=""></div>
                                     <div class="icon-shape hero-shape-four p_absolute w_90 h_70 tran_5"></div>
                                 </div>
@@ -578,7 +578,7 @@
                         <div class="service-block-14 wow fadeInUp animated" data-wow-delay="400ms" data-wow-duration="1500ms">
                             <div class="inner-box p_relative d_block pl_35 pt_50 pr_35 pb_35 b_radius_10 tran_5 b_shadow_6 mb_30">
                                 <div class="icon-box p_relative d_iblock mb_35">
-                                    <div class="icon p_relative d_iblock fs_45 g_color tran_5"><i class="icon-13"></i></div>
+                                    <div class="icon p_relative d_iblock fs_45 g_color tran_5"><img src="assets/images/icons/hid-icon-4.png" alt=""></div>
                                     <div class="icon-img hidden-icon"><img src="assets/images/icons/hid-icon-4.png" alt=""></div>
                                     <div class="icon-shape hero-shape-four p_absolute w_90 h_70 tran_5"></div>
                                 </div>
@@ -594,7 +594,7 @@
                         <div class="service-block-14 wow fadeInUp animated" data-wow-delay="600ms" data-wow-duration="1500ms">
                             <div class="inner-box p_relative d_block pl_35 pt_50 pr_35 pb_35 b_radius_10 tran_5 b_shadow_6 mb_30">
                                 <div class="icon-box p_relative d_iblock mb_35">
-                                    <div class="icon p_relative d_iblock fs_45 g_color tran_5"><i class="icon-14"></i></div>
+                                    <div class="icon p_relative d_iblock fs_45 g_color tran_5"><img src="assets/images/icons/hid-icon-5.png" alt=""></div>
                                     <div class="icon-img hidden-icon"><img src="assets/images/icons/hid-icon-5.png" alt=""></div>
                                     <div class="icon-shape hero-shape-four p_absolute w_90 h_70 tran_5"></div>
                                 </div>
@@ -610,7 +610,7 @@
                         <div class="service-block-14 wow fadeInUp animated" data-wow-delay="00ms" data-wow-duration="1500ms">
                             <div class="inner-box p_relative d_block pl_35 pt_50 pr_35 pb_35 b_radius_10 tran_5 b_shadow_6 mb_30">
                                 <div class="icon-box p_relative d_iblock mb_35">
-                                    <div class="icon p_relative d_iblock fs_45 g_color tran_5"><i class="icon-170"></i></div>
+                                    <div class="icon p_relative d_iblock fs_45 g_color tran_5"><img src="assets/images/icons/hid-icon-120.png" alt=""></div>
                                     <div class="icon-img hidden-icon"><img src="assets/images/icons/hid-icon-120.png" alt=""></div>
                                     <div class="icon-shape hero-shape-four p_absolute w_90 h_70 tran_5"></div>
                                 </div>
@@ -626,7 +626,7 @@
                         <div class="service-block-14 wow fadeInUp animated" data-wow-delay="300ms" data-wow-duration="1500ms">
                             <div class="inner-box p_relative d_block pl_35 pt_50 pr_35 pb_35 b_radius_10 tran_5 b_shadow_6 mb_30">
                                 <div class="icon-box p_relative d_iblock mb_35">
-                                    <div class="icon p_relative d_iblock fs_45 g_color tran_5"><i class="icon-171"></i></div>
+                                    <div class="icon p_relative d_iblock fs_45 g_color tran_5"><img src="assets/images/icons/hid-icon-121.png" alt=""></div>
                                     <div class="icon-img hidden-icon"><img src="assets/images/icons/hid-icon-121.png" alt=""></div>
                                     <div class="icon-shape hero-shape-four p_absolute w_90 h_70 tran_5"></div>
                                 </div>
@@ -642,7 +642,7 @@
                         <div class="service-block-14 wow fadeInUp animated" data-wow-delay="400ms" data-wow-duration="1500ms">
                             <div class="inner-box p_relative d_block pl_35 pt_50 pr_35 pb_35 b_radius_10 tran_5 b_shadow_6 mb_30">
                                 <div class="icon-box p_relative d_iblock mb_35">
-                                    <div class="icon p_relative d_iblock fs_45 g_color tran_5"><i class="icon-172"></i></div>
+                                    <div class="icon p_relative d_iblock fs_45 g_color tran_5"><img src="assets/images/icons/hid-icon-122.png" alt=""></div>
                                     <div class="icon-img hidden-icon"><img src="assets/images/icons/hid-icon-122.png" alt=""></div>
                                     <div class="icon-shape hero-shape-four p_absolute w_90 h_70 tran_5"></div>
                                 </div>
@@ -658,7 +658,7 @@
                         <div class="service-block-14 wow fadeInUp animated" data-wow-delay="600ms" data-wow-duration="1500ms">
                             <div class="inner-box p_relative d_block pl_35 pt_50 pr_35 pb_35 b_radius_10 tran_5 b_shadow_6 mb_30">
                                 <div class="icon-box p_relative d_iblock mb_35">
-                                    <div class="icon p_relative d_iblock fs_45 g_color tran_5"><i class="icon-173"></i></div>
+                                    <div class="icon p_relative d_iblock fs_45 g_color tran_5"><img src="assets/images/icons/hid-icon-123.png" alt=""></div>
                                     <div class="icon-img hidden-icon"><img src="assets/images/icons/hid-icon-123.png" alt=""></div>
                                     <div class="icon-shape hero-shape-four p_absolute w_90 h_70 tran_5"></div>
                                 </div>
